# growchinook-site

./: pyproject.toml
infra/: docker-compose.yml
src/growchinook/: manage.py
src/growchinook/data_entities/: apps.py  models.py
src/growchinook/data_entities/migrations/: 0001_initial.py
src/growchinook/growchinook/: asgi.py  settings.py  urls.py  wsgi.py
